Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2.2
  FEATURES
    * Font of lyrics applet is configurable in the lyrics applet setting page.
    * BPM editing, sorting, and filtering have been implemented. (BR 214056)
      Patch by Pierre Dumuid <pmdumuid@gmail.com>.
    * Made it possible to change a podcast channel's URL. (BR 195204)
    * Also support feed:// urls for subscribing to podcasts.
    * Limited the number of simultaneous podcast updates and downloads to four.
      This can be configured separately in the "amarokrc" configuration file.
    * Import podcast subscriptions from OPML.
    * Show HTML info for podcast channels that support this. Patches by
      Mathias Panzenböck. (BR 193357)
    * Ampache Service now shows Service info from last.fm
    * Moodbar support is back. Can be shown in progress bar or in the playlist.
      The 4 visual styles from Amarok 1 (normal, angry, frozen and happy) are 
      all supported. This feature requires that moodbars files are already present.
    * Cover images can now be fetched via HTTP. (BR 176899)
    * Custom Labels has returned.  Assign labels from the tag dialog, and
      see them in the tag dialog or in the playlist.
    * Fetch labels from last.fm for some tracks [UPDATE THIS ONCE WE FIGURE OUT WHEN TO DO SO]

  CHANGES:
    * Last.fm friends and neighbors are now sorted alphabetically.
    * Radically reduced memory consumption while downloading podcasts by writing direct to
      disk. Patches by Frank Meerkoetter. (BR 209937)
    * Podcast auto-update interval is now configurable in the rc-file. Default is 30
      minutes. (BR 212467)
    * Magnatune.com store: Better status message when downloading albums.
    * Moved the "Playlist Layout" button into the main menu, as the playlist
      toolbar was becoming too crowded.
    * New interface for repeat and random playback modes. Interface now correctly